kuard-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image: nhinx:1.14.0
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
