waste-cpu-resource-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waste-cpu-resource-deployment
  namespace: doridoridoriand
spec:
  replicas: 10
  selector:
    matchLabels:
      app: waste-cpu-resource-app
  template:
    metadata:
      namespace: doridoridoriand
      labels:
        app: waste-cpu-resource-app
    spec:
      containers:
        - name: waste-cpu-resource-container
          image: doridoridoriand/boring_primenumber:2.7.8-0.0.2
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 20000Mi
